	that work.
	* makemake.in (XCFLAGS): For Linux/alpha, enable all optimizations
	except ASM.

2018-01-14  Bruno Haible  <bruno@clisp.org>

	Fix a bug in the optimizations for SPARC64.
	* arilev0.d (mulu16): Cast the operands from uint16 to uint32, to force
	a zero-extend before the asm-coded instructions.

2018-01-14  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on Linux/ia64.
	* Makefile.devel (multibuild-linux-ia64): Enable all build variants
	that work.
	* makemake.in (XCFLAGS): For Linux/ia64, enable all optimizations
	except ASM.

2018-01-13  Bruno Haible  <bruno@clisp.org>

	Improve framepointerp in GENERIC64C_HEAPCODES model.
	* lispbibl.d (framepointerp) [GENERIC64C_HEAPCODES]: Correct bit mask.

2018-01-11  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on GNU/kFreeBSD/x86_64.
	* Makefile.devel (multibuild-freebsd-gnu-x86_64): Enable all build
	variants.
	* makemake.in (XCFLAGS): For GNU/kFreeBSD/x86_64, enable all
	optimizations except ASM.

2018-01-11  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on Linux/sparc64.
	* Makefile.devel (multibuild-linux-sparc64): Enable all build variants
	that work.
	* makemake.in (XCFLAGS): For Linux/sparc64, enable all optimizations
	except ASM.

2018-01-11  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on Linux/sparc.
	* Makefile.devel (multibuild-linux-sparc): Enable all build variants
	that work.
	* makemake.in (XCFLAGS): For Linux/sparc, enable all optimizations
	except ASM.

2018-01-11  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on Linux/powerpc64le.
	* Makefile.devel (multibuild-linux-powerpc64le): Enable all build
	variants.
	* makemake.in (XCFLAGS): For Linux/powerpc64le, enable all optimizations
	except ASM.

2018-01-11  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on Linux/powerpc64.
	* Makefile.devel (multibuild-linux-powerpc64): Enable all build
	variants.