@@ -62,6 +62,14 @@
 
 2018-01-14  Bruno Haible  <bruno@clisp.org>
 
+	Enable most optimizations on Linux/s390.
+	* Makefile.devel (multibuild-linux-s390): Enable all build variants
+	that work.
+	* makemake.in (XCFLAGS): For Linux/s390, enable all optimizations
+	except ASM.
+
+2018-01-14  Bruno Haible  <bruno@clisp.org>
+
 	Enable most optimizations on Linux/ia64.
 	* Makefile.devel (multibuild-linux-ia64): Enable all build variants
 	that work.
